--- a/files/lib/nuggets/file/which_mixin_rb.html
+++ b/files/lib/nuggets/file/which_mixin_rb.html
@@ -56,7 +56,7 @@
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Wed Feb 25 12:26:10 +0100 2009</td>
+      <td>Fri Jan 07 14:49:35 +0100 2011</td>
     </tr>
     </table>
   </div>
@@ -69,6 +69,13 @@
   <div id="contextContent">
 
 
+    <div id="requires-list">
+      <h3 class="section-bar">Required files</h3>
+
+      <div class="name-list">
+      rbconfig&nbsp;&nbsp;
+      </div>
+    </div>
 
    </div>
 
