--- a/classes/File.html
+++ b/classes/File.html
@@ -84,6 +84,13 @@
 
    </div>
 
+    <div id="method-list">
+      <h3 class="section-bar">Methods</h3>
+
+      <div class="name-list">
+      <a href="#M000100">ruby</a>&nbsp;&nbsp;
+      </div>
+    </div>
 
   </div>
 
@@ -100,6 +107,32 @@
 
 
     <!-- if method_list -->
+    <div id="methods">
+      <h3 class="section-bar">Public Class methods</h3>
+
+      <div id="method-M000100" class="method-detail">
+        <a name="M000100"></a>
+
+        <div class="method-heading">
+          <a href="#M000100" class="method-signature">
+          <span class="method-name">ruby</span><span class="method-args">()</span>
+          </a>
+        </div>
+      
+        <div class="method-description">
+          <p><a class="source-toggle" href="#"
+            onclick="toggleCode('M000100-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000100-source">
+<pre>
+     <span class="ruby-comment cmt"># File lib/nuggets/util/ruby.rb, line 319</span>
+319: <span class="ruby-keyword kw">def</span> <span class="ruby-constant">File</span>.<span class="ruby-identifier">ruby</span>; <span class="ruby-constant">Util</span><span class="ruby-operator">::</span><span class="ruby-constant">Ruby</span>.<span class="ruby-identifier">ruby_command</span>; <span class="ruby-keyword kw">end</span>
+</pre>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
 
 
   </div>
