--- a/classes/Nuggets.html
+++ b/classes/Nuggets.html
@@ -103,6 +103,10 @@
                 lib/nuggets/integer/map_mixin.rb
                 </a>
         <br />
+                <a href="../files/lib/nuggets/io/null_mixin_rb.html">
+                lib/nuggets/io/null_mixin.rb
+                </a>
+        <br />
                 <a href="../files/lib/nuggets/object/blank_mixin_rb.html">
                 lib/nuggets/object/blank_mixin.rb
                 </a>
@@ -189,6 +193,7 @@ Module <a href="Nuggets/Version.html" class="link">Nuggets::Version</a><br />
 Class <a href="Nuggets/Array.html" class="link">Nuggets::Array</a><br />
 Class <a href="Nuggets/File.html" class="link">Nuggets::File</a><br />
 Class <a href="Nuggets/Hash.html" class="link">Nuggets::Hash</a><br />
+Class <a href="Nuggets/IO.html" class="link">Nuggets::IO</a><br />
 Class <a href="Nuggets/Integer.html" class="link">Nuggets::Integer</a><br />
 Class <a href="Nuggets/Object.html" class="link">Nuggets::Object</a><br />
 Class <a href="Nuggets/Proc.html" class="link">Nuggets::Proc</a><br />
