--- a/classes/Util.html
+++ b/classes/Util.html
@@ -71,6 +71,10 @@
                 lib/nuggets/util/i18n.rb
                 </a>
         <br />
+                <a href="../files/lib/nuggets/util/ruby_rb.html">
+                lib/nuggets/util/ruby.rb
+                </a>
+        <br />
             </td>
         </tr>
 
@@ -102,6 +106,7 @@
       Module <a href="Util/ANSIColor2CSS.html" class="link">Util::ANSIColor2CSS</a><br />
 Module <a href="Util/ContentType.html" class="link">Util::ContentType</a><br />
 Module <a href="Util/I18n.html" class="link">Util::I18n</a><br />
+Module <a href="Util/Ruby.html" class="link">Util::Ruby</a><br />
 
     </div>
 
