--- a/files/lib/nuggets/util/ruby_rb.html
+++ b/files/lib/nuggets/util/ruby_rb.html
@@ -5,7 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>File: user_home_mixin.rb</title>
+  <title>File: ruby.rb</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
   <link rel="stylesheet" href="../../../.././rdoc-style.css" type="text/css" media="screen" />
@@ -47,16 +47,16 @@
 
 
   <div id="fileHeader">
-    <h1>user_home_mixin.rb</h1>
+    <h1>ruby.rb</h1>
     <table class="header-table">
     <tr class="top-aligned-row">
       <td><strong>Path:</strong></td>
-      <td>lib/nuggets/env/user_home_mixin.rb
+      <td>lib/nuggets/util/ruby.rb
       </td>
     </tr>
     <tr class="top-aligned-row">
       <td><strong>Last Update:</strong></td>
-      <td>Fri Jan 21 15:00:26 +0100 2011</td>
+      <td>Fri Jan 21 14:19:33 +0100 2011</td>
     </tr>
     </table>
   </div>
@@ -69,6 +69,15 @@
   <div id="contextContent">
 
 
+    <div id="requires-list">
+      <h3 class="section-bar">Required files</h3>
+
+      <div class="name-list">
+      rbconfig&nbsp;&nbsp;
+      rubygems&nbsp;&nbsp;
+      open4&nbsp;&nbsp;
+      </div>
+    </div>
 
    </div>
 
