--- a/fr_class_index.html
+++ b/fr_class_index.html
@@ -43,6 +43,8 @@
     <a href="classes/Nuggets/Hash/BlankMixin.html">Nuggets::Hash::BlankMixin</a><br />
     <a href="classes/Nuggets/Hash/NestMixin.html">Nuggets::Hash::NestMixin</a><br />
     <a href="classes/Nuggets/Hash/UnrollMixin.html">Nuggets::Hash::UnrollMixin</a><br />
+    <a href="classes/Nuggets/IO.html">Nuggets::IO</a><br />
+    <a href="classes/Nuggets/IO/NullMixin.html">Nuggets::IO::NullMixin</a><br />
     <a href="classes/Nuggets/Integer.html">Nuggets::Integer</a><br />
     <a href="classes/Nuggets/Integer/LengthMixin.html">Nuggets::Integer::LengthMixin</a><br />
     <a href="classes/Nuggets/Integer/MapMixin.html">Nuggets::Integer::MapMixin</a><br />
@@ -67,6 +69,7 @@
     <a href="classes/Numeric.html">Numeric</a><br />
     <a href="classes/Object.html">Object</a><br />
     <a href="classes/Proc.html">Proc</a><br />
+    <a href="classes/Process.html">Process</a><br />
     <a href="classes/Range.html">Range</a><br />
     <a href="classes/String.html">String</a><br />
     <a href="classes/String/Case.html">String::Case</a><br />
@@ -76,6 +79,7 @@
     <a href="classes/Util/ANSIColor2CSS.html">Util::ANSIColor2CSS</a><br />
     <a href="classes/Util/ContentType.html">Util::ContentType</a><br />
     <a href="classes/Util/I18n.html">Util::I18n</a><br />
+    <a href="classes/Util/Ruby.html">Util::Ruby</a><br />
   </div>
 </div>
 </body>
