--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -70,6 +70,8 @@
     <a href="files/lib/nuggets/integer/to_binary_s_rb.html">lib/nuggets/integer/to_binary_s.rb</a><br />
     <a href="files/lib/nuggets/io/agrep_rb.html">lib/nuggets/io/agrep.rb</a><br />
     <a href="files/lib/nuggets/io/modes_rb.html">lib/nuggets/io/modes.rb</a><br />
+    <a href="files/lib/nuggets/io/null_rb.html">lib/nuggets/io/null.rb</a><br />
+    <a href="files/lib/nuggets/io/null_mixin_rb.html">lib/nuggets/io/null_mixin.rb</a><br />
     <a href="files/lib/nuggets/numeric/between_rb.html">lib/nuggets/numeric/between.rb</a><br />
     <a href="files/lib/nuggets/numeric/duration_rb.html">lib/nuggets/numeric/duration.rb</a><br />
     <a href="files/lib/nuggets/numeric/limit_rb.html">lib/nuggets/numeric/limit.rb</a><br />
@@ -117,6 +119,7 @@
     <a href="files/lib/nuggets/util/content_type_rb.html">lib/nuggets/util/content_type.rb</a><br />
     <a href="files/lib/nuggets/util/dotted_decimal_rb.html">lib/nuggets/util/dotted_decimal.rb</a><br />
     <a href="files/lib/nuggets/util/i18n_rb.html">lib/nuggets/util/i18n.rb</a><br />
+    <a href="files/lib/nuggets/util/ruby_rb.html">lib/nuggets/util/ruby.rb</a><br />
     <a href="files/lib/nuggets/version_rb.html">lib/nuggets/version.rb</a><br />
   </div>
 </div>
