--- a/classes/Nuggets/Env/UserHomeMixin.html
+++ b/classes/Nuggets/Env/UserHomeMixin.html
@@ -80,7 +80,7 @@
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000120">user_home</a>&nbsp;&nbsp;
+      <a href="#M000134">user_home</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -102,41 +102,38 @@
     <div id="methods">
       <h3 class="section-bar">Public Instance methods</h3>
 
-      <div id="method-M000120" class="method-detail">
-        <a name="M000120"></a>
+      <div id="method-M000134" class="method-detail">
+        <a name="M000134"></a>
 
         <div class="method-heading">
-          <a href="#M000120" class="method-signature">
-          <span class="method-name">ENV.user_home => aString<br />
+          <a href="#M000134" class="method-signature">
+          <span class="method-name">ENV.user_home(default = '/') => aString<br />
 </span>
           </a>
         </div>
       
         <div class="method-description">
           <p>
-Finds the user&#8216;s home directory. Stolen from RubyGems ;-)
+Returns the user&#8216;s home directory, or <tt>default</tt> if it could
+not be found.
 </p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000120-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000120-source">
+            onclick="toggleCode('M000134-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000134-source">
 <pre>
     <span class="ruby-comment cmt"># File lib/nuggets/env/user_home_mixin.rb, line 36</span>
 36:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">user_home</span>(<span class="ruby-identifier">default</span> = <span class="ruby-operator">::</span><span class="ruby-constant">File</span><span class="ruby-operator">::</span><span class="ruby-constant">ALT_SEPARATOR</span> <span class="ruby-value">? </span><span class="ruby-value str">'C:/'</span> <span class="ruby-operator">:</span> <span class="ruby-value str">'/'</span>)
-37:     <span class="ruby-node">%w[HOME USERPROFILE]</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">homekey</span><span class="ruby-operator">|</span>
-38:       <span class="ruby-identifier">home</span> = <span class="ruby-keyword kw">self</span>[<span class="ruby-identifier">homekey</span>]
-39:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">home</span> <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">home</span>
+37:     <span class="ruby-node">%w[HOME HOMEDRIVE:HOMEPATH USERPROFILE APPDATA]</span>.<span class="ruby-identifier">each</span> { <span class="ruby-operator">|</span><span class="ruby-identifier">key</span><span class="ruby-operator">|</span>
+38:       <span class="ruby-identifier">home</span> = <span class="ruby-identifier">values_at</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">key</span>.<span class="ruby-identifier">split</span>(<span class="ruby-value str">':'</span>)).<span class="ruby-identifier">join</span>
+39:       <span class="ruby-keyword kw">return</span> <span class="ruby-identifier">home</span>.<span class="ruby-identifier">gsub</span>(<span class="ruby-regexp re">/\\/</span>, <span class="ruby-value str">'/'</span>) <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">home</span> <span class="ruby-operator">&amp;&amp;</span> <span class="ruby-operator">!</span><span class="ruby-identifier">home</span>.<span class="ruby-identifier">empty?</span>
 40:     }
 41: 
-42:     <span class="ruby-keyword kw">if</span> <span class="ruby-identifier">drive</span> = <span class="ruby-keyword kw">self</span>[<span class="ruby-value str">'HOMEDRIVE'</span>] <span class="ruby-keyword kw">and</span> <span class="ruby-identifier">path</span> = <span class="ruby-keyword kw">self</span>[<span class="ruby-value str">'HOMEPATH'</span>]
-43:       <span class="ruby-keyword kw">return</span> <span class="ruby-node">&quot;#{drive}:#{path}&quot;</span>
-44:     <span class="ruby-keyword kw">end</span>
-45: 
-46:     <span class="ruby-keyword kw">begin</span>
-47:       <span class="ruby-operator">::</span><span class="ruby-constant">File</span>.<span class="ruby-identifier">expand_path</span>(<span class="ruby-value str">'~'</span>)
-48:     <span class="ruby-keyword kw">rescue</span> <span class="ruby-constant">ArgumentError</span>
-49:       <span class="ruby-identifier">default</span>
-50:     <span class="ruby-keyword kw">end</span>
-51:   <span class="ruby-keyword kw">end</span>
+42:     <span class="ruby-keyword kw">begin</span>
+43:       <span class="ruby-operator">::</span><span class="ruby-constant">File</span>.<span class="ruby-identifier">expand_path</span>(<span class="ruby-value str">'~'</span>)
+44:     <span class="ruby-keyword kw">rescue</span> <span class="ruby-constant">ArgumentError</span>
+45:       <span class="ruby-identifier">default</span>
+46:     <span class="ruby-keyword kw">end</span>
+47:   <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
