--- a/classes/Nuggets/IO.html
+++ b/classes/Nuggets/IO.html
@@ -5,10 +5,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>File: user_home_mixin.rb</title>
+  <title>Class: Nuggets::IO</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
-  <link rel="stylesheet" href="../../../.././rdoc-style.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="../.././rdoc-style.css" type="text/css" media="screen" />
   <script type="text/javascript">
   // <![CDATA[
 
@@ -46,20 +46,32 @@
 
 
 
-  <div id="fileHeader">
-    <h1>user_home_mixin.rb</h1>
-    <table class="header-table">
-    <tr class="top-aligned-row">
-      <td><strong>Path:</strong></td>
-      <td>lib/nuggets/env/user_home_mixin.rb
-      </td>
-    </tr>
-    <tr class="top-aligned-row">
-      <td><strong>Last Update:</strong></td>
-      <td>Fri Jan 21 15:00:26 +0100 2011</td>
-    </tr>
-    </table>
-  </div>
+    <div id="classHeader">
+        <table class="header-table">
+        <tr class="top-aligned-row">
+          <td><strong>Class</strong></td>
+          <td class="class-name-in-header">Nuggets::IO</td>
+        </tr>
+        <tr class="top-aligned-row">
+            <td><strong>In:</strong></td>
+            <td>
+                <a href="../../files/lib/nuggets/io/null_mixin_rb.html">
+                lib/nuggets/io/null_mixin.rb
+                </a>
+        <br />
+            </td>
+        </tr>
+
+        <tr class="top-aligned-row">
+            <td><strong>Parent:</strong></td>
+            <td>
+                <a href="Object.html">
+                Object
+               </a>
+            </td>
+        </tr>
+        </table>
+    </div>
   <!-- banner header -->
 
   <div id="bodyContent">
@@ -80,6 +92,12 @@
 
     <div id="section">
 
+    <div id="class-list">
+      <h3 class="section-bar">Classes and Modules</h3>
+
+      Module <a href="IO/NullMixin.html" class="link">Nuggets::IO::NullMixin</a><br />
+
+    </div>
 
 
 
