--- a/classes/Process.html
+++ b/classes/Process.html
@@ -5,10 +5,10 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Module: Nuggets::Object::SilenceMixin</title>
+  <title>Module: Process</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta http-equiv="Content-Script-Type" content="text/javascript" />
-  <link rel="stylesheet" href="../../.././rdoc-style.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href=".././rdoc-style.css" type="text/css" media="screen" />
   <script type="text/javascript">
   // <![CDATA[
 
@@ -50,15 +50,11 @@
         <table class="header-table">
         <tr class="top-aligned-row">
           <td><strong>Module</strong></td>
-          <td class="class-name-in-header">Nuggets::Object::SilenceMixin</td>
+          <td class="class-name-in-header">Process</td>
         </tr>
         <tr class="top-aligned-row">
             <td><strong>In:</strong></td>
             <td>
-                <a href="../../../files/lib/nuggets/object/silence_mixin_rb.html">
-                lib/nuggets/object/silence_mixin.rb
-                </a>
-        <br />
             </td>
         </tr>
 
@@ -80,7 +76,7 @@
       <h3 class="section-bar">Methods</h3>
 
       <div class="name-list">
-      <a href="#M000159">silence</a>&nbsp;&nbsp;
+      <a href="#M000118">ruby</a>&nbsp;&nbsp;
       </div>
     </div>
 
@@ -100,33 +96,27 @@
 
     <!-- if method_list -->
     <div id="methods">
-      <h3 class="section-bar">Public Instance methods</h3>
+      <h3 class="section-bar">Public Class methods</h3>
 
-      <div id="method-M000159" class="method-detail">
-        <a name="M000159"></a>
+      <div id="method-M000118" class="method-detail">
+        <a name="M000118"></a>
 
         <div class="method-heading">
-          <a href="#M000159" class="method-signature">
-          <span class="method-name">silence { ... }<br />
-</span>
+          <a href="#M000118" class="method-signature">
+          <span class="method-name">ruby</span><span class="method-args">(*args)</span>
           </a>
         </div>
       
         <div class="method-description">
-          <p>
-Silence warnings for block execution.
-</p>
           <p><a class="source-toggle" href="#"
-            onclick="toggleCode('M000159-source');return false;">[Source]</a></p>
-          <div class="method-source-code" id="M000159-source">
+            onclick="toggleCode('M000118-source');return false;">[Source]</a></p>
+          <div class="method-source-code" id="M000118-source">
 <pre>
-    <span class="ruby-comment cmt"># File lib/nuggets/object/silence_mixin.rb, line 36</span>
-36:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">silence</span>
-37:     <span class="ruby-identifier">verbose</span>, <span class="ruby-identifier">$VERBOSE</span> = <span class="ruby-identifier">$VERBOSE</span>, <span class="ruby-keyword kw">nil</span>
-38:     <span class="ruby-keyword kw">yield</span>
-39:   <span class="ruby-keyword kw">ensure</span>
-40:     <span class="ruby-identifier">$VERBOSE</span> = <span class="ruby-identifier">verbose</span>
-41:   <span class="ruby-keyword kw">end</span>
+     <span class="ruby-comment cmt"># File lib/nuggets/util/ruby.rb, line 324</span>
+324:   <span class="ruby-keyword kw">def</span> <span class="ruby-constant">Process</span>.<span class="ruby-identifier">ruby</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">args</span>)
+325:     <span class="ruby-identifier">argv</span> = <span class="ruby-constant">Util</span><span class="ruby-operator">::</span><span class="ruby-constant">Ruby</span>.<span class="ruby-identifier">ruby_options_to_argv</span>(<span class="ruby-identifier">args</span>, <span class="ruby-constant">File</span>.<span class="ruby-identifier">ruby</span>)
+326:     <span class="ruby-constant">Open4</span>.<span class="ruby-identifier">popen4</span>(<span class="ruby-operator">*</span><span class="ruby-identifier">argv</span>, <span class="ruby-operator">&amp;</span><span class="ruby-identifier">block_given?</span> <span class="ruby-value">? </span><span class="ruby-constant">Proc</span>.<span class="ruby-identifier">new</span> <span class="ruby-operator">:</span> <span class="ruby-keyword kw">nil</span>)
+327:   <span class="ruby-keyword kw">end</span>
 </pre>
           </div>
         </div>
